# simple-oidc-client

./: .gitignore  Cargo.toml  README.md  example-env.txt
src/: config.rs  handlers.rs  main.rs  oidc.rs
