[package]
name = "simple-oidc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
axum-sessions = "0.4.1"
config = "0.13.3"
josekit = "0.8.2"
once_cell = "1.17.1"
openidconnect = "2.5.1"
rand = "0.8.5"
reqwest = "0.11.14"
serde = "1.0.157"
serde_json = "1.0.94"
sha1 = "0.10.5"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
x509-parser = "0.15.0"
uuid = { version = "1.3.0", features = [ "v4", "fast-rng" ] }
anyhow = "1.0.70"
